--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -189,19 +189,20 @@
 	</servlet-mapping>
 	
 	<servlet>
-		<servlet-name>video</servlet-name>
+		<servlet-name>play</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet
 		</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/video-servlet.xml
+			<param-value>/WEB-INF/spring/appServlet/play-servlet.xml
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>video</servlet-name>
-		<url-pattern>*.video</url-pattern>
+		<servlet-name>play</servlet-name>
+		<url-pattern>*.play</url-pattern>
 	</servlet-mapping>
+	
 </web-app>
